<resources>
    <string name="app_name">Country Quizz</string>
    <string name="welcome">Country Blitz Quizz</string>
    <string name="description">The quizz you are about to begin \n will test you're knwolage</string>
    <string name="begin">Begin</string>
    <string name="title_activity_quizz">Quizz</string>

    <!-- QUESTIONS STRINGS -->
    <string name="q_1">1. Select the name of this country flag</string>
    <string name="q_2">2. How many countries are in the world?</string>
    <string name="q_3">3. Which of these are transcontinental countries</string>
    <string name="q_4">4. The Danube flows through the following counties</string>

    <!-- POSSIBLE ANSWERS STRINGS -->
    <string name="q_1_a">France</string>
    <string name="q_1_b">Belgium</string>
    <string name="q_1_c">Belarus</string>
    <string name="q_1_d">Turkmenistan</string>
    <string name="q_2_a">195</string>
    <string name="q_3_a">Egypt</string>
    <string name="q_3_b">Kazakhstan</string>
    <string name="q_3_c">Columbia </string>
    <string name="q_3_d">South Africa</string>
    <string name="q_4_a">Romania</string>
    <string name="q_4_b">Austria</string>
    <string name="q_4_c">Moldova</string>
    <string name="q_4_d">Slovakia</string>

</resources>
