<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="60dp"
        style="@style/welcomeText"
        android:text="@string/welcome"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/welcomeText"
        android:text="@string/description"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        style="@style/button"
        android:gravity="center"
        android:text="@string/begin"
        android:onClick="startQuiz"/>

</LinearLayout>